--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-dj-database-url==0.5.0
-Django==2.0.3
-django-widget-tweaks==1.5.0
-Markdown==2.6.11
-python-decouple==3.1
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+dj-database-url==1.0.0
+Django==4.1.3
+django-widget-tweaks==1.4.12
+importlib-metadata==5.1.0
+Markdown==3.4.1
+python-decouple==3.6
+sqlparse==0.4.3
+zipp==3.11.0
